--- a/index.html
+++ b/index.html
@@ -10,14 +10,32 @@
 <body>
     <span class="block"><h1>wrapper div under here</h1></span>
     <div id="wrapper-div">
-        <div class="inside-div"><h3>div inside wrapper div </h3></div>
+        <div class="inside-div">
+            <h3>Bank </h3>
+            <p>Balance: <span id="loan-balance">200kr</span></p>
+            <button id="loan-button">get a loan</button>
+        </div>
         <div class="inside-div">
             <h3>div inside wrapper div </h3>
             <button>Now with button</button>
             <button>Now with two buttons</button>
         </div>
+        <div class="inside-div">
+            <h3>third div inside wrapper div </h3>
+            <form action="/action_page.php">
+                <label for="cars">Choose a car:</label>
+                <select name="cars" id="cars">
+                  <option value="volvo">Volvo</option>
+                  <option value="saab">Saab</option>
+                  <option value="opel">Opel</option>
+                  <option value="audi">Audi</option>
+                </select>
+                <br><br>
+                <input type="submit" value="Submit">
+              </form>
+        </div>
     </div>    
     <div><h1>bottom div</h1></div>
-
+<script src="app.js"></script>
 </body>
 </html>
