work and bank buttons now functional

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <div id="wrapper-div">
         <div class="inside-div">
             <h3>Bank </h3>
-            <p>Balance: <span id="loan-balance">200kr</span></p>
+            <p>Balance: <span id="bank-balance">200</span>kr.</p>
             <button id="loan-button">get a loan</button>
         </div>
         <div class="inside-div">
-            <h3>div inside wrapper div </h3>
-            <button>Now with button</button>
-            <button>Now with two buttons</button>
+            <h3>Work </h3>
+            <p>Amount: <span id="work-balance">0</span>kr. </p>
+            <button id="bank-button">Bank</button>
+            <button id="work-button">Work</button>
         </div>
         <div class="inside-div">
             <h3>third div inside wrapper div </h3>
