added the buy function and pictures from API to DOM. minor adjustments for readability. all main functionalities should be implemented.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <span class="block"><h1>wrapper div under here</h1></span>
     <div id="wrapper-div">
         <div class="inside-div">
             <h3>Bank </h3>
@@ -29,13 +28,15 @@
                 <select name="computers" id="computers">
                 </select>
                 <br><br>
+                <button id="buy-button" > Buy computer </button>
              <div>
                  <h4>Information on selected computer</h4>
+                 <img id="image-computer" src=""></p>
                  <p id="description-computer"></p>
                  <p id="specs-computer"></p>
                  <p id="price-computer"></p>
              </div> 
-             <button id="test-button" > Buy computer </button>
+            
         </div>
     </div>    
 <script src="app.js"></script>
