Added loan repayment functionality

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <p>Current loan: <span id="loan-balance">0</span>kr.</p>
             <p>Balance: <span id="bank-balance">200</span>kr.</p>
             <button id="loan-button">get a loan</button>
+            <div id="repay-button"></div>
         </div>
         <div class="inside-div">
             <h3>Work </h3>
