Banking button now handles negative loan

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
              </div> 
             
         </div>
+    
     </div>    
+    <div><h2>A bunch of text maybe computer infor will go here</h2></div>
 <script src="app.js"></script>
 </body>
 </html>
