code has been separated into modules. no functionality should have been changed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>Current loan: <span id="loan-balance">0</span>kr.</p>
             <p>Balance: <span id="bank-balance">200</span>kr.</p>
             <button id="loan-button">get a loan</button>
-            <div id="repay-button"></div>
+            <div id="repay-button-area"></div>
         </div>
         <div class="inside-div">
             <h3>Work </h3>
@@ -42,6 +42,6 @@
     
     </div>    
     <div><h2>A bunch of text maybe computer infor will go here</h2></div>
-<script src="app.js"></script>
+<script type="module" src="app.js"></script>
 </body>
 </html>
