--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="wrapper-div">
+        <div class="bank-work-wrapper">
         <div class="inside-div">
             <h3>Bank </h3>
             <p>Current loan: <span id="loan-balance">0</span>kr.</p>
@@ -16,32 +17,38 @@
             <button id="loan-button">get a loan</button>
             <div id="repay-button-area"></div>
         </div>
+
         <div class="inside-div">
             <h3>Work </h3>
             <p>Amount: <span id="work-balance">0</span>kr. </p>
             <button id="bank-button">Bank</button>
             <button id="work-button">Work</button>
         </div>
-        <div class="inside-div">
-            <h3>Computer </h3>
-            <p id="computer-text"></p>
+    </div>
+
+        <div class="inside-div" id=computer-wrapper>
+            <div id="left-div">
+                 <h3>Computer </h3>
+                 <p id="computer-text"></p>
                 <label for="computers">Choose a computer:</label>
                 <select name="computers" id="computers">
                 </select>
                 <br><br>
                 <button id="buy-button" > Buy computer </button>
-             <div>
+                <p id="specs-computer"></p>
+            </div>
+
+             <div id="right-div">
                  <h4>Information on selected computer</h4>
-                 <img id="image-computer" src=""></p>
+                 <img id="image-computer" src=""> 
                  <p id="description-computer"></p>
-                 <p id="specs-computer"></p>
-                 <p id="price-computer"></p>
+                 <p id="price-computer"></p>               
              </div> 
             
         </div>
     
     </div>    
-    <div><h2>A bunch of text maybe computer infor will go here</h2></div>
+
 <script type="module" src="app.js"></script>
 </body>
 </html>
